# go-jit

./: README.md  block.go  context.go  func.go  go.mod  insn.go  jit.go  label.go  main.go  type.go  value.go
_examples/: gofunc.go  mul_add.go
internal/: config.h
internal/ccall/: Makefile  block.go  callback.c  ccall.go  context.go  func.go  insn.go  jit-alloc.c  jit-apply-arm.c  jit-apply-arm.h  jit-apply-func.h  jit-apply-rules.h  jit-apply-x86-64.c  jit-apply-x86-64.h  jit-apply-x86.c  jit-apply-x86.h  jit-apply.c  jit-bitset.c  jit-bitset.h  jit-block.c  jit-compile.c  jit-config.h  jit-context.c  jit-cpuid-x86.c  jit-cpuid-x86.h  jit-debugger.c  jit-dump.c  jit-elf-defs.h  jit-elf-read.c  jit-elf-write.c  jit-except.c  jit-function.c  jit-gen-arm.c  jit-gen-arm.h  jit-gen-x86-64.h  jit-gen-x86.h  jit-init.c  jit-insn.c  jit-internal.h  jit-interp-opcode.c  (+48 more)
internal/ccall/include/: .gitignore
internal/ccall/include/jit/: Makefile  Makefile.am  Makefile.in  jit-apply.h  jit-arch-arm.h  jit-arch-generic.h  jit-arch-x86-64.h  jit-arch-x86.h  jit-block.h  jit-common.h  jit-context.h  jit-debugger.h  jit-defs.h  jit-defs.h.in  jit-dump.h  jit-dynamic.h  jit-elf.h  jit-except.h  jit-function.h  jit-init.h  jit-insn.h  jit-intrinsic.h  jit-memory.h  jit-meta.h  jit-objmodel-private.h  jit-objmodel.h  jit-opcode-compat.h  jit-opcode.h  jit-plus.h  jit-type.h  jit-unwind.h  jit-util.h  jit-value.h  jit-vmem.h  jit-walk.h  jit.h
